--- a/story.html
+++ b/story.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <div class="nav-logo">The Key of Unity</div>
     <ul class="nav-links">
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="info.html">Information</a></li>
       <li><a href="story.html"class="active" >Story</a></li>
       <li><a href="staff.html">Staff</a></li>
@@ -41,4 +41,5 @@
 
   </div>
 </body>
+
 </html>
