--- a/staff.html
+++ b/staff.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <div class="nav-logo">The Key of Unity</div>
     <ul class="nav-links">
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="info.html">Information</a></li>
       <li><a href="story.html">Story</a></li>
       <li><a href="staff.html"class="active" >Staff</a></li>
@@ -157,3 +157,4 @@
 </main>
 </body>
 </html>
+
