--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <div class="nav-logo">The Key of Unity</div>
     <ul class="nav-links">
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="info.html"class="active">Information</a></li>
       <li><a href="story.html">Story</a></li>
       <li><a href="staff.html">Staff</a></li>
@@ -75,3 +75,4 @@
   </div>
 </body>
 </html>
+
