--- a/help.html
+++ b/help.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <div class="nav-logo">The Key of Unity</div>
     <ul class="nav-links">
-      <li><a href=index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="info.html">Information</a></li>
       <li><a href="story.html">Story</a></li>
       <li><a href="staff.html">Staff</a></li>
@@ -95,4 +95,5 @@ ll play?<br>
 
 </body>
 </html>
+
 
