--- a/info.html
+++ b/info.html
@@ -46,7 +46,7 @@
     <main class="card" id="about">
       <h2>About the Play</h2>
       <p>
-        In Harry's time at Hogwatrs, Hogwarts faces a challenge unlike any before.
+        In Harry's time at Hogwarts, Hogwarts faces a challenge unlike any before.
         The Founders' ancient artifact, the Key of Unity, has re-emerged — and its secrets may
         decide the fate of the school. This original stage production brings together mystery,
         magic, and the spirit of house unity, featuring beloved characters and thrilling
@@ -68,11 +68,12 @@
   <!-- Footer -->
   <footer>
     <p>© 2025 The Key of Unity.</p>
-      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series by J.K. Rowling.</p>
+      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series written by J.K. Rowling.</p>
       <p>This project is unofficial and not affiliated with Warner Bros., J.K. Rowling, or any of their partners.</p>
   </footer>
 
   </div>
 </body>
 </html>
+
 
