--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
   <!-- Footer -->
   <footer>
     <p>© 2025 The Key of Unity.</p>
-      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series by J.K. Rowling.</p>
+      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series written by J.K. Rowling.</p>
       <p>This project is unofficial and not affiliated with Warner Bros., J.K. Rowling, or any of their partners.</p>
   </footer>
 
   </div>
 </body>
 </html>
+
 
