--- a/help.html
+++ b/help.html
@@ -64,9 +64,6 @@
   <p>&gt; What message does the story try to give?<br>
   Courage matters, but unity wins.</p><br>
 
-ll play?<br>
-  She enforces fair play and models principled leadership. She leads the students in the activation of the stone.</p><br>
-
   <p>&gt; Which character changes the most over the play?<br>
   A proud rival (Draco Malfoy) learns to trust classmates from other houses.</p><br>
 
@@ -89,12 +86,13 @@ ll play?<br>
   <!-- Footer -->
   <footer>
     <p>© 2025 The Key of Unity.</p>
-    <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series by J.K. Rowling.</p>
+    <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series written by J.K. Rowling.</p>
     <p>This project is unofficial and not affiliated with Warner Bros., J.K. Rowling, or any of their partners.</p>
   </footer>
 
 </body>
 </html>
+
 
 
 
