--- a/tickets.html
+++ b/tickets.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="pages.css">
-  <title>Tickets | The Key of Unity</title>sss
+  <title>Tickets | The Key of Unity</title>
 </head>
 <body>
   <!-- Navigation -->
@@ -29,7 +29,7 @@
             <p class="subtitle"> Tickets are required to attend the performance and can be purchased online here,
                or in person at the VFMS Library at ALL TIMES. You can also receive tickets at the PERFORMANCE.
                Ticket prices are FREE for all. You may donate to the performance ON THE DATE OF THE PERFORMANCE.
-               Please note: all proceeds from donates and sales will go directly toward covering the costs of the play
+               Please note: all proceeds from donations and sales will go directly toward covering the costs of the play
                (such as costumes, sets, and venue expenses) and WILL NOT be used for profit.
             <div class="meta">
             </div>
@@ -60,10 +60,11 @@
         <!-- Footer -->
   <footer>
     <p>© 2025 The Key of Unity.</p>
-      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series by J.K. Rowling.</p>
+      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series written by J.K. Rowling.</p>
       <p>This project is unofficial and not affiliated with Warner Bros., J.K. Rowling, or any of their partners.</p>
   </footer>
 
   </div>
 </body>
+
 </html>
