--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <div class="nav-logo">The Key of Unity</div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="Home.html">Home</a></li>
       <li><a href="info.html">Information</a></li>
       <li><a href="story.html">Story</a></li>
       <li><a href="staff.html">Staff</a></li>
@@ -26,11 +26,7 @@
 
           <div class="title-block">
             <h1>Tickets</h1>
-            <p class="subtitle"> Tickets are required to attend the performance and can be purchased online here,
-               or in person at the VFMS Library at ALL TIMES. You can also receive tickets at the PERFORMANCE.
-               Ticket prices are FREE for all. You may donate to the performance ON THE DATE OF THE PERFORMANCE.
-               Please note: all proceeds from donations and sales will go directly toward covering the costs of the play
-               (such as costumes, sets, and venue expenses) and WILL NOT be used for profit.
+            <p class="subtitle"> Tickets are required to attend the performance and can be purchased online here, or in person at the VFMS on the performance date(s). Ticket prices are FREE for all students and staff of VFMS, and $5 for all other audience. Please note: all proceeds from donations and tickets will go directly toward covering the costs of the play (such as costumes, sets, and venue expenses) and WILL NOT be used for profit.
             <div class="meta">
             </div>
           </div>
@@ -42,7 +38,7 @@
           <p>
             You are REQUIRED to sign yourself up prior to the performance.
             You may sign up for multiple people, BUT you must submit each person SEPARATELY.
-            Please try and not submit yourself twice.
+            Please do not submit yourself twice. Contact us if you are unsure if you've already signed up.
             Thank you!
           </p>
 
@@ -60,11 +56,10 @@
         <!-- Footer -->
   <footer>
     <p>© 2025 The Key of Unity.</p>
-      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series written by J.K. Rowling.</p>
+      <p>The Key of Unity is a non-commercial fan production inspired by the Harry Potter series by J.K. Rowling.</p>
       <p>This project is unofficial and not affiliated with Warner Bros., J.K. Rowling, or any of their partners.</p>
   </footer>
 
   </div>
 </body>
-
 </html>
