--- a/staff.html
+++ b/staff.html
@@ -45,39 +45,33 @@
       <h2>Production Team</h2>
     <ul class="proTeam">
           <li>Director - Songhao (Maxi) Zhang</li>
-          <li>Producer</li>
+          <li>Producer - Lydia Kurniawan</li>
     </ul>
     </div>
 
     <div class="card" id="about">
       <h2>Assistants</h2>
     <ul class="asstTeam">
-          <li>Script Writer</li>
-          <li>Script Editor</li>
-          <li>Dialogue Specialist</li>
+          <li>Script Writer - Songhao (Maxi) Zhang</li>
+          <li>Script Editor - Lydia Kurniawan</li>
           <li>Choreographer</li>
-          <li>Teleprompter</li>
-          <li>Cast Caller</li>
-          <li>Coordinator</li>
+          <li>Teleprompter - Songhao (Maxi) Zhang</li>
+          <li>Cast Caller - Anotonia Sun</li>
     </ul>
     </div>
 
     <div class="card" id="about">
       <h2>Media Crew</h2>
     <ul class="mediaCrew">
-          <li>Media Director</li>
+          <li>Media Director - Brenda Shen</li>
           <li>Videographer 1</li>
           <li>Videographer 2</li>
-          <li>Videographer 3</li>
-          <li>Videographer 4</li>
-          <li>Videographer 5</li>
-          <li>Light Artist</li>
-          <li>Music Artist</li>
-          <li>Spell Effects Technician</li>
-          <li>Web Developer</li>
+          <li>Light Artist - Ian Xiong</li>
+          <li>Music Artist - Lydia Kurniawan</li>
+          <li>Spell Effects Technician - Antonia Sunv</li>
+          <li>Web Developer - Songhao (Maxi) Zhang</li>
     </ul>
   </div>
-
     <div class="card" id="about">
       <h2>Props</h2>
     <ul class="proPs">
@@ -119,20 +113,19 @@
           <li>Ron Weasley</li>
           <li>Hermione Granger</li>
           <li>Draco Malfoy</li>
-          <li>Pansy Parkinson</li>
+          <li>Pansy Parkinson - Ritika Lohano</li>
           <li>Cho Chang</li>
           <li>Luna Lovegood</li>
-          <li>Hannah Abbott</li>
-          <li>Susan Bones</li>
-          <li>Lavender Brown</li>
+          <li>Justin Finch-Fletchy</li>
           <li>Albus Dumbledore</li>
-          <li>Minerva McGonagall</li>
+          <li>Minerva McGonagall - Mrs Beth Davison</li>
           <li>Severus Snape</li>
           <li>Filius Flitwick</li>
-          <li>Death Eater 1</li>
-          <li>Death Eater 2</li>
-          <li>Death Eater 3</li>
-          <li>Death Eater 4</li>
+          <li>Sorting Hat - Veer Garg</li>
+          <li>Death Eater 1 - </li>
+          <li>Death Eater 2 - DD Myres</li>
+          <li>Death Eater 3 - Ian Rebello</li>
+          <li>Death Eater 4 - Dohun Lee</li>
           <li>Lord Voldemort</li>
     </ul>
   </div>
@@ -140,7 +133,7 @@
     <div class="card" id="about">
       <h2>Extras</h2>
     <ul class="ExtRas">
-          <li>placeholder</li>
+          <li>Bennett Scharf</li>
     </ul>
   </div>
 
@@ -157,5 +150,6 @@
 </main>
 </body>
 </html>
+
 
 
