--- a/staff.html
+++ b/staff.html
@@ -68,7 +68,7 @@
           <li>Videographer 2</li>
           <li>Light Artist - Ian Xiong</li>
           <li>Music Artist - Lydia Kurniawan</li>
-          <li>Spell Effects Technician - Antonia Sunv</li>
+          <li>Spell Effects Technician - Brenda Shen</li>
           <li>Web Developer - Songhao (Maxi) Zhang</li>
     </ul>
   </div>
@@ -97,8 +97,8 @@
     <div class="card" id="about">
       <h2>Other</h2>
     <ul class="othEr">
-          <li>Scheduling Manager</li>
-          <li>Financial Manager</li>
+          <li>Scheduling Manager - Lydia Kurniawan</li>
+          <li>Financial Manager - Songhao (Maxi) Zhang</li>
           <li>Community Officer</li>
           <li>Volunteer Officers</li>
           <li>Substitutes:</li>
@@ -150,6 +150,7 @@
 </main>
 </body>
 </html>
+
 
 
 
