--- a/info.html
+++ b/info.html
@@ -29,7 +29,7 @@
     <header class="hero">
 
      <div class="poster-container">
-      <img src="https://ibb.co/3yDV64bg" alt="Poster" width="127.5" height="165">
+        <a href="https://ibb.co/3yDV64bg"><img src="https://i.ibb.co/zhyC9Qgq/IMG-7469.jpg" alt="IMG-7469" border="0"></a>
 
     </div>
 
@@ -75,6 +75,7 @@
   </div>
 </body>
 </html>
+
 
 
 
