--- a/info.html
+++ b/info.html
@@ -28,8 +28,12 @@
   <div class="container">
     <header class="hero">
 
-     <div class="poster-container">
-        <a href="https://ibb.co/3yDV64bg"><img src="https://i.ibb.co/zhyC9Qgq/IMG-7469.jpg" alt="IMG-7469" border="0"></a>
+<div class="poster-container">
+  <a href="https://i.postimg.cc/4dsQChdn/IMG-7469.jpg" target="_blank">
+    <img src="https://i.postimg.cc/4dsQChdn/IMG-7469.jpg" alt="Poster" width="127.5" height="165">
+  </a>
+</div>
+
 
     </div>
 
@@ -75,6 +79,7 @@
   </div>
 </body>
 </html>
+
 
 
 
