--- a/info.html
+++ b/info.html
@@ -29,7 +29,8 @@
     <header class="hero">
 
 <div class="poster-container">
-    <img src="https://i.postimg.cc/4dsQChdn/IMG-7469.jpg" alt="Poster" width="127.5" height="165">
+   <img src="https://i.postimg.cc/4dsQChdn/IMG-7469.jpg" alt="Poster" class="poster">
+
   </a>
 </div>
 
@@ -78,6 +79,7 @@
   </div>
 </body>
 </html>
+
 
 
 
